--- a/Style.css
+++ b/Style.css
@@ -15,6 +15,28 @@ html {
     z-index: 10001;
 }
 
+/* Chat containers */
+.container {
+  border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+/* Darker chat container */
+.darker {
+  border-color: #ccc;
+  background-color: #ddd;
+}
+
+/* Clear floats */
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 .logo {
     color: #FF8100;
     font-size: 3rem;
